--- a/lab10/labstyles.css
+++ b/lab10/labstyles.css
@@ -9,8 +9,8 @@ nav {margin-bottom: 30px;}
 
 .address {margin: 10px, 10px, 10px, 10px; flex: 1;}
 .contact {margin: 10px, 10px, 10px, 10px; flex: 1;}
-.outreach {margin: 10px, 10px, 10px, 10px; flex: 1;}
-.map {margin: 10px, 10px, 10px, 10px; flex: 1; flex-wrap: wrap;}
+.outreach {margin: 10px, 10px, 10px, 10px; flex: 2; display:}
+.map {margin: 10px, 10px, 10px, 10px; flex: 1; display: flex;}
 .clear {clear: both;}
 .row1 {background-color: #CEDEBD; display: flex; border-radius: 1em;}
 .row2 {background-color: #CEDEBD; display: flex; border-radius: 1em; flex-wrap: wrap;}
@@ -20,3 +20,4 @@ aside {background-color: rgb(226, 199, 221); border-radius: 5px; padding: 20px;}
 .flexbox2 {display: flex;}
 .banner {max-width: 100%;}
 p {padding: 40px;}
+form {max-width: 100%;}
