--- a/lab10/labstyles.css
+++ b/lab10/labstyles.css
@@ -9,7 +9,7 @@ nav {margin-bottom: 30px;}
 
 .address {margin: 10px, 10px, 10px, 10px; flex: 1;}
 .contact {margin: 10px, 10px, 10px, 10px; flex: 1;}
-.outreach {margin: 10px, 10px, 10px, 10px; flex: 2; display:}
+.outreach {margin: 10px, 10px, 10px, 10px; flex: 2;}
 .map {margin: 10px, 10px, 10px, 10px; flex: 1; display: flex;}
 .clear {clear: both;}
 .row1 {background-color: #CEDEBD; display: flex; border-radius: 1em;}
@@ -21,3 +21,7 @@ aside {background-color: rgb(226, 199, 221); border-radius: 5px; padding: 20px;}
 .banner {max-width: 100%;}
 p {padding: 40px;}
 form {max-width: 100%;}
+#specialcomments {
+    display: flex;
+    flex-wrap: wrap;
+}
