--- a/lab10/labstyles.css
+++ b/lab10/labstyles.css
@@ -21,7 +21,5 @@ aside {background-color: rgb(226, 199, 221); border-radius: 5px; padding: 20px;}
 .banner {max-width: 100%;}
 p {padding: 40px;}
 form {max-width: 100%;}
-#specialcomments {
-    display: flex;
-    flex-wrap: wrap;
-}
+@media only screen and (max-width: 800px)
+    {nav a {width: 100%; display: block; padding: 10px;} span {display: none;}}
