--- a/lab10/labstyles.css
+++ b/lab10/labstyles.css
@@ -19,7 +19,7 @@ div {padding: 10px;}
 aside {background-color: rgb(226, 199, 221); border-radius: 5px; padding: 20px;}
 .flexbox2 {display: flex;}
 .banner {max-width: 100%;}
-p {padding: 40px;}
+body main {padding: 10px;}
 form {max-width: 100%;}
 @media only screen and (max-width: 800px)
     {nav a {width: 100%; display: block; padding: 10px;} span {display: none;}}
