--- a/lab10/labstyles.css
+++ b/lab10/labstyles.css
@@ -1,6 +1,6 @@
 body {font-family: Verdana, Geneva, Tahoma, sans-serif; color: #2E4374; background-color: #FFF5E0; padding: 40px;}
 a {color: #000000;}
-h1 {color: #96C291; text-align: center; padding: 40px;}
+h1 {color: #345031; text-align: center; padding: 40px;}
 nav {background-color: #CEDEBD; padding: 10px;}
 nav a{color: #352F44;}
 nav a:hover {background-color: #ccc6ff;}
