--- a/project6/projectstyles.css
+++ b/project6/projectstyles.css
@@ -3,33 +3,64 @@ header {
     justify-content: center;}
 header img {width: 1000px;}
 
-nav {float: right;}
-nav a:link{color: #000;
-}
-nav a:visited{color: #000;}
-nav a:hover{color: #2e3956; background-color: #c4f7ff;}
-
-body {font-family: Arial, Helvetica, sans-serif;
+body {font-family: 'Afacad', sans-serif;
+    font-family: 'Jost', sans-serif;
     margin-left: 5%;
     margin-right: 5%;
     background-color: #fef5fc;}
 
+/* NAV */
+    nav {display: flex; background-color: #3A602E; color: #fef5fc;
+        padding-left: 10px; padding-top: 10px; padding-right: 10px; justify-content: space-between; position: fixed; width: 100%;}
+nav div {display: flex;}
+.pinkwordmark {display: flex;}
+.navlinks {justify-content: space-between; padding-right: 10px;}
+.navlinks div {padding: 10px;}
+.pinkwordmark {width: 300px;}
+.navlinks a:link{color: #fef5fc;}
+.navlinks a:visited{color: #fef5fc;}
+.navlinks a:hover{color: #2e3956; background-color: #ffdbfd;}
+
+/*HIDE NAV*/
+#hamicon {width: 20px;}
+@media only screen and (min-width: 800px) {
+    #hamicon {display: none;}}
+
+@media only screen and (max-width: 799px) {
+        a {display: block;
+            padding: 5px;
+            border: 1px #333333;}
+        #navlinks {display: none;}
+        
+    }
+
+/*RESPONSIVE*/
+@media only screen and (max-width: 800px) {
+    .introduction {display: block;}
+    
+  }
+
+
 .aboutme {display: flex;
-        flex-direction: row;}
-.introduction {padding: 10px;}
+        flex-direction: row; padding: 60px;}
+.introduction {padding: 60px;}
 .headshot {padding: 10px;}
 
 .ski {display: flex;
-    flex-direction: row;}
+    flex-direction: row; padding-left: 60px; padding-right: 60px;}
 .skipic {padding: 10px;}
-.skibio {padding: 10px;}
+.skibio {padding: 60px;}
 
-div img {width: 600px;}
+.headshotpic {width: 400px; border-radius: 20px;}
 
+.sewing {display: flex; flex-direction: column;}
 .pictures, .captions {display: flex;
 padding: 20px;
 justify-content: space-between;}
-.pictures img {width: 70%;}
+.pictures img {width: 70%; border-radius: 20px;}
+.captions {margin-left: 250px; margin-right: 250px; text-align: center;}
+
+.oliviaandtessa {width: 400px; border-radius: 20px}
 
 footer {display: flex;
 justify-content: space-evenly;
@@ -37,7 +68,109 @@ margin-left: 20%;
 margin-right: 20%;}
 
 .signature {width: 35%;}
-.signoff1 {flex: 1; justify-content: center;}
-.signoff2 {flex: 1; justify-content: center;}
+.signoff1 {display: flex;}
+.signoff2 {display: flex; width: 50%; justify-content: center;}
 .signoff {display: flex; flex-direction: column;
-justify-content: center;}
+justify-content: center; align-items: center; font-size: 20px;}
+
+quote {text-size-adjust: 14em;
+align-content: center;}
+
+/*CONTACT*/
+.contactmain {display: flex; justify-content: space-between;}
+.contactimage {display: flex; margin-left: 300px;}
+.contactform {margin-right: 300px;}
+.connect {margin-left: 40px;}
+
+
+#contactheadshot {display:flex;}
+.contact1 {display: flex; flex-direction: column; flex: 1;}
+.outreach {display: flex;}
+
+/* Home Page*/
+.projectthumbails {display: flex; justify-content: space-evenly; margin-left: 20px; margin-right: 20px;}
+.hockeythumb, .heritagethumb, .magazinethumb {display: flex; flex-basis: 1; flex-direction: column; margin: 10px;}
+.b1 img {max-width: 70%;
+    height: auto;}
+.b2 img {max-width: 92%;
+    height: auto;}
+.b3 img {max-width: 100%;
+    height: auto;}
+.b1 {display: flex; justify-content: center; padding: 10px;}
+.b2 {display: flex; justify-content: center; padding: 10px;}
+.b3 {display: flex; justify-content: center; padding: 10px;}
+.a1 {display: flex; justify-content: center; padding: 10px; font-size: 15pt; text-decoration: underline;}
+.a2 {display: flex; justify-content: center; padding: 10px; font-size: 15pt; text-decoration: underline;}
+.a3 {display: flex; justify-content: center; padding: 10px; font-size: 15pt; text-decoration: underline;}
+
+/* MY WORK PAGE*/
+.hockey1, .hockey2, .hockey3, .hockey3, .hockey4, .hockey5 {max-height: 100%;
+    height: 300px;}
+    
+    .magazine1, .magazine2, .magazine3, .magazine4 {max-height: 100%; height: 300px;}
+    .heritage1, .heritage2, .heritage3, .heritage4 {max-height: 100%; height: 300px;}
+    
+    section {margin-right: 40px; margin-left: 40px; margin-top: 40px;}
+.myworkheaders {font-size: 20pt; text-align: center; padding-bottom: 20px;}
+.myworkdescriptions {margin-left: 200px; margin-right: 200px;}
+
+/* carousel code from https://webdesign.tutsplus.com/easy-slider-carousel-with-pure-css--cms-107626t */
+body {
+    margin: 0;
+    position: relative;
+  }
+  
+  main {
+    display: flex;
+    justify-content: center;
+    /*align-items: center; */vertical-align: middle;
+   /* min-height: 100vh; */
+    padding-bottom: 64px;
+  }
+  
+  .carousel-container {
+    width: 100%;
+   /* padding-block: 16px 32px;
+    margin: 16px 32px; */
+    overflow-x: auto;
+    display: flex;
+    width: 100%;
+    gap: 8px;
+    align-items: center;
+    scroll-snap-type: x mandatory;
+  }
+  
+  .carousel-container::-webkit-scrollbar {
+    height: 14px;
+    width: calc(100% - 48px);
+  }
+  
+  .carousel-container::-webkit-scrollbar-track {
+    background: #b1b3b399;
+  }
+  
+  .carousel-container::-webkit-scrollbar-thumb {
+    background: #3A602E;
+  }
+  
+  .carousel-container::-webkit-scrollbar-track-piece:start {
+    background: #3A602E;
+  }
+  
+  .carousel-slide {
+    flex: 1 0 30%;
+    aspect-ratio: 1;
+    flex-flow: column nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    scroll-snap-align: center;
+  }
+  
+  @media (max-width: 600px) {
+    .carousel-slide {
+      flex: 1 0 90%;
+    }
+  }
+
+
