--- a/project6/projectstyles.css
+++ b/project6/projectstyles.css
@@ -40,6 +40,29 @@ nav div {display: flex;}
     
   }
 
+/*SKIP TO CONTENT LINK*/
+.skip-to-content-link {
+    left: 50%;
+    bottom: 50%;
+    position: absolute;
+    top: 20px; left: 20px;
+  }
+
+  .skip-to-content-link {
+    background: #e77e23;
+    height: 30px;
+    left: 50%;
+    padding: 8px;
+    position: absolute;
+    transform: translateY(-100%);
+    transition: transform 0.3s;
+  }
+  
+  .skip-to-content-link:focus {
+    transform: translateY(0%);
+  }
+
+
 
 .aboutme {display: flex;
         flex-direction: row; padding: 60px;}
